//ALL REQUEST PROTOS SHOULD INCLUDE A MinimumUserProto AS optional that represents which client sent it/triggered it 
//DO NO START PROPERTY METHODS WITH THE WORDS NEW OR COPY

package com.lvl6.proto;

option java_outer_classname = "RewardsProto";
//DO NOT USE ID AS THE NAME OF A PROPERTY IN ANY PROTO


//------------------------------------------------------------------------------------------

message RewardProto {
	optional int32 rewardId = 1;
	//id in one of the *_config tables
	optional int32 staticDataId = 2;
	
	optional RewardType typ = 3;
	optional int32 amt = 4;
	
	enum RewardType {
		NO_REWARD = 1;
		ITEM = 2;
	}
	
}

//------------------------------------------------------------------------------------------
